feat: 引入腾讯云机器翻译;

--- a/cfg.yml
+++ b/cfg.yml
@@ -10,3 +10,7 @@ ling_va:
 baidu:
   app_id: ""            # 应用ID
   app_key: ""           # 应用密钥
+
+tencent_cloud_mt:       # 腾讯云机器翻译
+  secret_id: ""         # 密钥ID 用于标识接口调用者身份
+  secret_key: ""        # 密钥关键字 用于验证接口调用者的身份
