feat: 增加彩云小译, 接口文档不太行, 不过接口响应速度还是OK的, 翻译语种有问题;

--- a/cfg.yml
+++ b/cfg.yml
@@ -23,3 +23,6 @@ ali_cloud_mt:           # 阿里云翻译
   ak_id: ""             # 应用ID
   ak_secret: ""         # 应用密钥
   region: ""            # 区域
+
+caiyun_ai:                      # 彩云小翻译
+  token: "3975l6lr5pcbvidl6jl2" # 密钥
